--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -28,5 +28,16 @@
 
 <%= link_to 'Back', clients_path %>
 
+<!-- %h1 New Client
+
+= simple_form_for @client do |f|
+  = f.input :advertiser
+  = f.input :name
+  = f.input :phone
+  = f.input :email
+  = f.association :category
+  = f.submit -->
+
+
 
 
