--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,43 +1,8 @@
-<h1>New Client</h1>
+<div class="container">
+  <h1>New Client</h1>
 
-<%= form_for(@client) do |f| %>
-  <div>
-    <%= f.label :advertiser %><br>
-    <%= f.text_field :advertiser %>
-  </div>
+  <%= render 'form' %>
 
-  <div>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
+  <%= link_to 'Back', clients_path %>
 
-  <div>
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
-  </div>
-
-  <div>
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-
-  <div>
-    <%= f.submit %>
-  </div>
-<% end %>
-
-<%= link_to 'Back', clients_path %>
-
-<!-- %h1 New Client
-
-= simple_form_for @client do |f|
-  = f.input :advertiser
-  = f.input :name
-  = f.input :phone
-  = f.input :email
-  = f.association :category
-  = f.submit -->
-
-
-
-
+</div>
