--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,44 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+   <div class="container">
+      <div class="header">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Bookings</a></li>
+          <li><a href="#">Clients</a></li>
+          <li><a href="#">Issues</a></li>
+          <li><a href="#">Tearsheets</a></li>
+          <li><a href="#">Quotes</a></li>
+          <li><a href="#">Creative</a></li>
+        </ul>
+        <h3 class="text-muted"><%= image_tag "ausdoc_logo.png" %></h3>
+      </div>
+  
+    <% if user_signed_in? %>
+      <span>You are logged in as <%= current_user.email %></span>
+      <%= link_to 'Logout', destroy_user_session_path, :method => 'delete' %>
+    <% else %>
+      <%= link_to 'Login', new_user_session_path %>
+    <% end %>
 
-<%= yield %>
+    <% if notice %>
+      <p class ="alert alert-notice"><%= notice %></p>
+    <% end %>
 
+    <% if alert %>
+      <p class ="alert alert-error"><%= alert %></p>
+    <% end %>
+
+    <%= yield %>
+
+  <hr>
+
+  <footer>
+    <p>&copy; Cirrus Media 2013</p>
+  </footer>
+    
+  </div>
 </body>
 </html>
 
