--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,17 +6,17 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="<%= controller_name %>">
    <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Bookings</a></li>
-          <li><a href="#">Clients</a></li>
-          <li><a href="#">Issues</a></li>
-          <li><a href="#">Tearsheets</a></li>
-          <li><a href="#">Quotes</a></li>
-          <li><a href="#">Creative</a></li>
+          <li class="home"><%= link_to "Home", "/"%></li>
+          <li class="bookings"><%= link_to "Bookings", bookings_path%></li>
+          <li class="clients"><%= link_to "Clients", clients_path%></li>
+          <li class="issues"><%= link_to "Issues", issues_path%></li>
+          <li><%= link_to "Tearsheets", "#", :data => {:target => '#myModal', :toggle => 'modal'} %></li>
+          <li><%= link_to "Quotes", "#", :data => {:target => '#myModal', :toggle => 'modal'} %></li>
+          <li><%= link_to "Creative", "#", :data => {:target => '#myModal', :toggle => 'modal'} %></li>
         </ul>
         <h3 class="text-muted"><%= image_tag "ausdoc_logo.png" %></h3>
       </div>
@@ -38,13 +38,31 @@
 
     <%= yield %>
 
-  <hr>
+    <hr>
 
-  <footer>
-    <p>&copy; Cirrus Media 2013</p>
-  </footer>
+    <footer>
+      <p>&copy; Cirrus Media 2013</p>
+    </footer>
     
   </div>
+
+  <!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">ADC Manager</h4>
+      </div>
+      <div class="modal-body">
+        Sorry....We're not quite there yet, but this feature will be ready in a future release!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 </body>
 </html>
 
