--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,2 +1,36 @@
 <h1>Bookings</h1>
 
+  <div class="table-responsive">
+    <table class="table">
+      <tr>
+        <th>Booking Number</th>
+        <th>Issue Date</th>
+        <th>Client</th>
+        <th>Ad Size</th>
+        <th>Position</th>
+        <th>Status</th>
+        <th colspan="2">Actions</th>
+      </tr>
+     
+      <% @bookings.each do |booking| %>
+        <tr>
+          <td><%= booking.booking_number %></td>
+          <td><%= booking.issue.issue_date %></td>
+          <td><%= booking.client_id %></td>
+          <td><%= booking.ad_size %></td>
+          <td><%= booking.position %></td>
+          <td><%= booking.status %></td>
+          <!--<td><%= link_to 'Show', booking %></td>-->
+          <td><%= link_to 'Edit', edit_booking_path(booking) %></td>
+          <td><%= link_to 'Delete', booking_path(booking), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </table>
+    <%= link_to 'New Booking', new_booking_path, :class => "btn btn-primary" %>
+  </div>
+
+
+
+
+
+
