--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for @client do |f| %>
   <% if @client.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@client.errors.count, "error") %> prohibited
-      this client from being saved:</h2>
+    <h4><%= pluralize(@client.errors.count, "error") %> prohibited
+      this client from being saved:</h4>
     <ul>
     <% @client.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
@@ -11,52 +11,30 @@
   </div>
   <% end %>
 
-  <p>
+
+  <div class="form-group">
     <%= f.label :advertiser %><br>
-    <%= f.text_field :advertiser %>
-  </p>
+    <%= f.text_field :advertiser, :class => "form-control" %>
+  </div>
  
-   <p>
+  <div class="form-group">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
+    <%= f.text_field :name, :class => "form-control" %>
+  </div>
 
-  <p>
+  <div class="form-group">
     <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
-  </p>
+    <%= f.text_field :phone, :class => "form-control" %>
+  </div>
 
-  <p>
+  <div class="form-group">
     <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </p>
+    <%= f.text_field :email, :class => "form-control" %>
+  </div>
 
-  <p>
-    <%= f.submit %>
-  </p>
+  <div class="form-group">
+    <%= f.submit :class => "btn btn-primary" %>
+  </div>
+  
 <% end %>
 
-<form role="form">
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputFile">File input</label>
-    <input type="file" id="exampleInputFile">
-    <p class="help-block">Example block-level help text here.</p>
-  </div>
-  <div class="checkbox">
-    <label>
-      <input type="checkbox"> Check me out
-    </label>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
-
-
-<!-- test fields = :class => "bootstap class"
