--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,7 +1,7 @@
   <h1>Clients list</h1>
 
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-hover">
       <tr>
         <th>Advertiser</th>
         <th>Name</th>
@@ -16,7 +16,7 @@
           <td><%= client.name %></td>
           <td><%= client.phone %></td>
           <td><%= client.email %></td>
-<!--           <td><%= link_to 'Show', client %></td> -->
+          <!--<td><%= link_to 'Show', client %></td>-->
           <td><%= link_to 'Edit', edit_client_path(client) %></td>
           <td><%= link_to 'Delete', client_path(client), method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
