--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <div class="jumbotron">
   <h1>Welcome to the ADCManager</h1>
   <p class="lead">With more classified pages than any other medical publication, Australian Doctor classifieds is a must for advertising your course or conference, position(s) available across the nation and anything else worth buying or selling! The ADC Manager will assist you with coordinating your campaign.</p>
-  <p><%= link_to "Create an account", "#", :class => "btn btn-lg btn-success" %></p>
+  <p><%= link_to "Create an account", '/users/sign_up', :class => "btn btn-lg btn-success" %></p>
 </div>
 
 <div class="row marketing">
