--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -18,34 +18,35 @@
  
   <div class="form-group">
     <%= f.label :issue_date %><br>
-    <%= f.select :issue_id, Issue.all.collect{|i| [i.issue_date,i.id]}, {:include_blank => "Please select an issue"}, {:class => "form-control"} %>
+    <%= f.select :issue_id, Issue.all.collect{|i| [i.issue_date,i.id]}, {}, {:class => "form-control"} %>
   </div>
 
   <div class="form-group">
     <%= f.label :client %><br>
-    <%= f.select :client_id, Client.all.collect{|c| [c.advertiser,c.id]}, {:include_blank => "Please select a Client"}, {:class => "form-control"} %>
+    <%= f.select :client_id, Client.all.collect{|c| [c.advertiser,c.id]}, {}, {:class => "form-control"} %>
   </div>
 
   <div class="form-group">
     <%= f.label :ad_size %><br>
-    <%= f.text_field :ad_size, :class => "form-control" %>
+    <%= f.select :ad_size, ["FP","1/2H","1/2V","1/3H","1/3V","1/4H","1/4V","PAN"], 
+    {:include_blank => "Please select an ad size"}, {:class => "form-control"} %>
   </div>
 
   <div class="form-group">
     <%= f.label :position %><br>
-    <%= f.select :position, ["COU","NAT","COU","NSW","QLD","VIC","SA","NT","ACT","FOR","P&S","MPS","COU","GEN"], 
+    <%= f.select :position, ["COU","NAT","COU","NSW","QLD","VIC","SA","NT","ACT","WA","FOR","P&S","MPS","GEN"], 
     {:include_blank => "Please select a position"}, {:class => "form-control"} %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :status %><br>
+    <%= f.select :status, ["ENTERED", "REPEAT MATERIAL","CREATIVE REQUIRED","APPROVAL REQUESTED","APPROVED"], 
+    {:include_blank => "Please select a status"}, {:class => "form-control"} %>
   </div>
 
   <div class="form-group">
     <%= f.label :creative %><br>
     <%= f.file_field :creative %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :status %><br>
-    <%= f.select :status, ["Booking Entered", "MI's to come","1st Proof","Corrections required","2nd proof","APPROVED"], 
-    {:include_blank => "Please select a status"}, {:class => "form-control"} %>
   </div>
 
 
