--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,24 @@
 </head>
 <body class="<%= controller_name %>">
 <div class="container">
+  
+  <br/>
+
+  <% if user_signed_in? %>
+  <span>You are logged in as <%= current_user.email %></span>
+  <%= link_to 'Logout', destroy_user_session_path, :method => 'delete' %>
+  <% else %>
+  <%= link_to 'Login', new_user_session_path %>
+  <% end %>
+
+<!--   <% if notice %>
+  <p class ="alert alert-notice"><%= notice %></p>
+  <% end %>
+
+  <% if alert %>
+  <p class ="alert alert-error"><%= alert %></p>
+  <% end %> -->
+
   <div class="header">
     <ul class="nav nav-pills pull-right">
       <li class="home"><%= link_to "Home", "/"%></li>
@@ -21,20 +39,7 @@
     <h3 class="text-muted"><%= image_tag "ausdoc_logo.png" %></h3>
   </div>
 
-  <% if user_signed_in? %>
-  <span>You are logged in as <%= current_user.email %></span>
-  <%= link_to 'Logout', destroy_user_session_path, :method => 'delete' %>
-  <% else %>
-  <%= link_to 'Login', new_user_session_path %>
-  <% end %>
-
-  <% if notice %>
-  <p class ="alert alert-notice"><%= notice %></p>
-  <% end %>
-
-  <% if alert %>
-  <p class ="alert alert-error"><%= alert %></p>
-  <% end %>
+  <br/>
 
   <%= yield %>
 
