finishing touches to form views and mailer

--- a/app/views/model_mailer/new_booking_notification.text.erb
+++ b/app/views/model_mailer/new_booking_notification.text.erb
@@ -1,4 +1,4 @@
-Hi,
+Dear User,
  
 A new booking has been added with the following details: 
 
@@ -9,4 +9,6 @@ A new booking has been added with the following details:
 * Position: <%= @booking.position %>
 * Status: <%= @booking.status %>
 
-Thanks
+Thanks,
+
+ADCManager
