--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="container">
 
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= f.error_notification %>
+  <h2>Forgot your password?</h2>
 
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
-  </div>
+  <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <%= f.input :email, :required => true, :autofocus => true, :input_html => { :class => "form-control" } %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <br/>
+
+    <div class="form-group">
+      <%= f.button :submit, "Send me reset password instructions", :class => "btn btn-lg btn-primary btn-block" %>
+    </div>
+  <% end %>
+
+<!--<%= render "devise/shared/links" %>-->
+
+</div>
