--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,21 @@
-<h2>Sign up</h2>
+<div class="container">
 
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+  <h2>Sign up</h2>
 
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
-    <%= f.input :password, :required => true %>
-    <%= f.input :password_confirmation, :required => true %>
-  </div>
+  <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <%= f.input :email, :required => true, :autofocus => true, :input_html => { :class => "form-control" } %>
+      <%= f.input :password, :required => true, :input_html => { :class => "form-control" } %>
+      <%= f.input :password_confirmation, :required => true, :input_html => { :class => "form-control" } %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="form-group">
+      <%= f.button :submit, "Sign up", :class => "btn btn-lg btn-primary btn-block" %>
+    </div>
+  <% end %>
 
+  <!--<%= render "devise/shared/links" %>-->
+
+</div>
